<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscoverFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="30px"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/demonstration_panel"
            android:id="@+id/demonstrationPanel"
            android:background="#f22    "
            android:textColor="#000000"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/buttonPanel"
            android:layout_below="@id/demonstrationPanel"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="30px"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="Switch Users"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/user_1"
                    android:id="@+id/button_1"
                    android:onClick="demoButtonClickHandler"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/user_2"
                    android:id="@+id/button_2"
                    android:onClick="demoButtonClickHandler"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/user_3"
                    android:id="@+id/button_3"
                    android:onClick="demoButtonClickHandler"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:text="@string/user_4"
                    android:id="@+id/button_4"
                    android:onClick="demoButtonClickHandler"/>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>



</FrameLayout>